Grace/tests/gibbs/errors/t098.grace
// ERROR = P1018
var void := object {
    .
}
